--- a/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
+++ b/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
@@ -7,9 +7,9 @@ main:
   - "this operation also increments the address in 📍  PPUAddr, and has a little quirk:"
   - all reads are <delayed> by 1, except for the Palette RAM section and its mirrors
   responses:
-  - how can we implement the delay? ⌛ [delay]
+  - how can we implement the delay? ⌛ [exercise]
 
-delay:
+exercise:
   messages:
   - simple, when a <read> is requested, you read into a buffer, but then you return the <previous value> of that buffer
   - |-
