--- a/src/data/levels/05b_PPU/25_Mapper tick/chat/es.yml
+++ b/src/data/levels/05b_PPU/25_Mapper tick/chat/es.yml
@@ -5,9 +5,9 @@ main:
   - "lo implementaremos tan simplemente como podamos:"
   - simplemente llama a una función `tick()` en el ciclo 260 de cada pre-line y scanline visible
   responses:
-  - ¿es tan simple? [simple]
+  - ¿es tan simple? [exercise]
 
-simple:
+exercise:
   messages:
   - ¡sí!
   - |-
