--- a/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
+++ b/src/data/levels/03_Cartridge/03_The magic constant/chat/en.yml
@@ -1,7 +1,5 @@
 ---
 main:
-  run: |
-    if (m.$end) $.goTo("exercise");
   messages:
   - we preserve games in digital format with <game files> (also called <ROMs>)
   - these contain 🤖  <code>, 👾  <graphics>, and a 🗣️  <header> that identifies the hardware
@@ -19,16 +17,14 @@ neeesfiles:
   - what do you want me to do? [exercise]
 
 exercise:
-  run: |
-    set((m) => m.$end = true);
   messages:
   - 📚  add a constructor to the 💾  `Cartridge` class receiving the ROM bytes
   - 📚  save them in a property called `bytes`
   - 📚  if the magic constant doesn't match $4E $45 $53 $1A, throw an error with the "Invalid ROM." message
   responses:
-  - how can I add a constructor? 😳 [constructor]
-  - I need help checking the bytes 🥺 [help]
-  - help me throw an error 🤔 [errors]
+  - (*) how can I add a constructor? 😳 [constructor]
+  - (*) I need help checking the bytes 🥺 [help]
+  - (*) help me throw an error 🤔 [errors]
 
 constructor:
   messages:
@@ -42,16 +38,21 @@ constructor:
         }
       }
       ```
-  responses: []
+  responses:
+  - ...exercise
 
 help:
   messages:
   - you'll receive a `Uint8Array`, which works similar to regular arrays!
   - so ```javascript bytes[0]``` represents the first byte, ```javascript bytes[1]``` the second one, and so on
   - remember that you can express hexadecimal notation with the ~0x~ prefix, i.e. `0x4e`
-  responses: []
+  responses:
+  - ...exercise
 
 errors:
   messages:
-  - "to throw errors, use:\n  ```javascript throw new Error(\"a message\");```"
-  responses: []
+  - |-
+    to throw errors, use:
+      ```javascript throw new Error(\"a message\");```
+  responses:
+  - ...exercise
