--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
@@ -13,9 +13,9 @@ oam:
   - 📄  ~/lib/ppu/Sprite.js~
   - se encarga de algunas cosas como analizar los atributos
   responses:
-  - gracias, pero todavía necesito leer la OAM, ¿verdad? [implement]
+  - gracias, pero todavía necesito leer la OAM, ¿verdad? [exercise]
 
-implement:
+exercise:
   messages:
   - correcto ✅
   - 📚  crea una clase 🛸  `SpriteRenderer`
@@ -32,9 +32,9 @@ implement:
       **->** retorna una nueva instancia de `Sprite`, leyendo el índice OAM `id`
       (¡recuerda agregar 1 a la coordenada Y!)
   responses:
-  - ¿por qué debería agregar 1 a la coordenada Y? ➕ [addone]
-  - ¿cómo sé si el sprite es ~8x8~ o ~8x16~? 📏 [spritesize]
-  - ¿cómo sé el id de tile o el id de la pattern table? 🕊️ 📖 [patterntable]
+  - (*) ¿por qué debería agregar 1 a la coordenada Y? ➕ [addone]
+  - (*) ¿cómo sé si el sprite es ~8x8~ o ~8x16~? 📏 [spritesize]
+  - (*) ¿cómo sé el id de tile o el id de la pattern table? 🕊️ 📖 [patterntable]
 
 addone:
   messages:
@@ -43,18 +43,18 @@ addone:
   - es decir, si el byte 0 de una entrada de OAM se establece en 0, se dibuja en la línea 1
   - y no hay forma de dibujar un sprite comenzando desde la línea 0
   responses:
-  - ...implement
+  - ...exercise
 
 spritesize:
   messages:
   - eso es una configuración global, configurada en 🎛️  PPUCtrl
   - cuando ```javascript ppu.registers.ppuCtrl.spriteSize === 1```, los sprites deben usar el modo ~8x16~
   responses:
-  - ...implement
+  - ...exercise
 
 patterntable:
   messages:
   - en modo ~8x8~, el id de tile es el `byte1` de la entrada OAM, y el id de pattern table es ```javascript ppu.registers.ppuCtrl.sprite8x8PatternTableId```
   - en modo ~8x16~, the id de tile es ```javascript (byte1 & 0b11111110)``` y el id de pattern table es ```javascript (byte1 & 0b00000001)```
   responses:
-  - ...implement
+  - ...exercise
