--- a/src/data/levels/05b_PPU/22_Masking/chat/en.yml
+++ b/src/data/levels/05b_PPU/22_Masking/chat/en.yml
@@ -7,7 +7,7 @@ main:
   - 🛸  and ~s~ enables sprite rendering
   responses:
   - (*) why would a game want to disable rendering? [why]
-  - let's do it [lets]
+  - let's do it [exercise]
 
 why:
   messages:
@@ -17,7 +17,7 @@ why:
   responses:
   - ...main
 
-lets:
+exercise:
   messages:
   - 📚  in 🎭  `PPUMask`, implement the `onLoad()` method, using `addField(...)` to map the mentioned bits
   - |-
