--- a/src/data/levels/05c_APU/04_Audio Registers/chat/en.yml
+++ b/src/data/levels/05c_APU/04_Audio Registers/chat/en.yml
@@ -6,7 +6,6 @@ main:
   - check out 📄  ~/docs/apu/audio_registers.en.md~
   responses:
   - give me an example 🙏 [example]
-  - <<level.isCompleted || m.$exercise>> 📚  take me to the action [useit]
 
 example:
   messages:
@@ -26,11 +25,9 @@ numbers:
   - these side effects can reset note durations, start frequency sweeps, or even mute entire channels!
   - "I've coded a class that will help you implement this, you should use it 📖"
   responses:
-  - how can I use it? [useit]
+  - how can I use it? [exercise]
 
-useit:
-  run: |
-    set((m) => m.$exercise = true);
+exercise:
   messages:
   - read the docs at 📄  ~/docs/lib/InMemoryRegister.en.md~
   - and use 📄  ~/tmpl/apu/AudioRegisters.js~ as a template for the audio registers file
